--- a/.jshintrc
+++ b/.jshintrc
@@ -10,7 +10,7 @@
   "newcap": true,
   "noarg": true,
   "undef": true,
-  "strict": true,
+  "strict": false,
   "quotmark": "single",
   "scripturl": true
 }
