--- a/package.json
+++ b/package.json
@@ -20,16 +20,24 @@
     "babel-core": "^5.5.0",
     "gulp": "^3.6.0",
     "gulp-babel": "^5.1.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-istanbul": "^0.9.0",
     "gulp-jasmine": "^2.1.0",
+    "gulp-jasmine-browser": "^0.2.3",
     "gulp-jscs": "^1.1.0",
     "gulp-jshint": "^1.5.3",
     "gulp-nsp": "^0.4.5",
     "gulp-plumber": "^1.0.0",
+    "gulp-util": "^3.0.6",
     "gulp-xo": "^0.4.0",
+    "jasmine-core": "^2.3.4",
     "jasmine-reporters": "^2.0.7",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "phantomjs": "^1.9.18"
   },
   "dependencies": {
     "moment": "~2.9.0",
